--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -48,7 +48,7 @@
     <ul class="nav navbar-nav navbar-right">
       <li>
         <a href="#">
-          <span class="glyphicon glyphicon-user"></span> Sign Up</a>
+          <button>BookNow</button>
       </li>
       <li>
         <a href="#">
@@ -57,50 +57,9 @@
     </ul>
   </ul>
 </nav>
-<!-- <nav id="mobile-menu" class="mm-menu mm-theme-dark mm-effect-listitems-slide mm-offcanvas mm-current mm-opened">
-  <div class="mm-panels">
-    <em class="mm-counter">6</em>
-    <div class="mm-panel mm-hasnavbar mm-opened mm-current" id="mm-1">
-      <div class="mm-navbar">
-        <a class="mm-title">Menu</a>
-      </div>
-      <ul class="mm-listview">
-        <li id="menu-item-739" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home page_item page-item-6 current_page_item mm-selected">
-          <a>HOME</a>
-        </li>
-        <li id="menu-item-33" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children">
-          <em class="mm-counter">1</em>
-          <a class="mm-next" href="#mm-2" data-target="#mm-2"></a>
-          <a >ROOMS</a>
-        </li>
-        <li id="menu-item-32" class="menu-item menu-item-type-post_type menu-item-object-page">
-          <a>GALLERY</a>
-        </li>
-        <li id="menu-item-740" class="menu-item menu-item-type-post_type menu-item-object-page">
-          <a >DINING</a>
-        </li>
-        <li id="menu-item-36" class="menu-item menu-item-type-post_type menu-item-object-page">
-          <a>ABOUT</a>
-        </li>
-        <li id="menu-item-35" class="menu-item menu-item-type-post_type menu-item-object-page">
-          <a>CONTACT</a>
-        </li>
-      </ul>
-    </div>
-    <div class="mm-panel mm-hasnavbar mm-hidden" id="mm-2">
-      <div class="mm-navbar">
-        <a class="mm-btn mm-prev" href="#mm-1" data-target="#mm-1"></a>
-        <a class="mm-title" href="#mm-1">ROOMS</a>
-      </div>
-      <ul class="sub-menu mm-listview">
-        <li id="menu-item-780" class="menu-item menu-item-type-post_type menu-item-object-page">
-          <a>ROOM DETAILS</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav> -->
-<div class="jumbotron"class="container-fluid" >
+
+<!-- Section A-->
+<div class="container fill">
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -111,17 +70,31 @@
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
+
       <div class="item active">
-        <img src="../../../assets/images/Reception.jpg" alt="Reception">
+        <img src="../../../assets/images/Reception.jpg" alt="Reception" style="width:1000%;">
+        <div class="carousel-caption">
+          <h3>Reception</h3>
+          <p>We are happy to serve you!!</p>
+        </div>
       </div>
 
       <div class="item">
-        <img src="../../../assets/images/bedroom.jpg" alt="bedroom">
+        <img src="../../../assets/images/bedroom.jpg" alt="bedroom" style="width:1000%;">
+        <div class="carousel-caption">
+          <h3>Bedroom</h3>
+          <p>Feel the comfort!</p>
+        </div>
       </div>
 
-      <!-- <div class="item">
-        <img src=".jpg" alt="New York">
-      </div> -->
+      <div class="item">
+        <img src="../../../assets/images/Reception.jpg" alt="Reception" style="width:1000%;">
+        <div class="carousel-caption">
+          <h3>New York</h3>
+          <p>We love the Big Apple!</p>
+        </div>
+      </div>
+
     </div>
 
     <!-- Left and right controls -->
@@ -134,6 +107,70 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-
-
 </div>
+<section>
+  <div class="album text-muted">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+          <img data-src="holder.js/100px280?theme=thumb" alt="Thumbnail [100%x280]" style="height: 280px; width: 100%; display: block;"
+            src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22156%22%20height%3D%22280%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20156%20280%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1606e4f7213%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1606e4f7213%22%3E%3Crect%20width%3D%22156%22%20height%3D%22280%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2230.8359375%22%20y%3D%22146.3%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+            data-holder-rendered="true">
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little
+            bit longer.</p>
+        </div>
+        <div class="col-md-3">
+          <img data-src="holder.js/100px280?theme=thumb" alt="Thumbnail [100%x280]" style="height: 280px; width: 100%; display: block;"
+            src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22156%22%20height%3D%22280%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20156%20280%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1606e4f7251%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1606e4f7251%22%3E%3Crect%20width%3D%22156%22%20height%3D%22280%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2230.8359375%22%20y%3D%22146.3%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+            data-holder-rendered="true">
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little
+            bit longer.</p>
+        </div>
+        <div class="col-md-3">
+          <img data-src="holder.js/100px280?theme=thumb" alt="Thumbnail [100%x280]" style="height: 280px; width: 100%; display: block;"
+            src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22156%22%20height%3D%22280%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20156%20280%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1606e4f7252%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1606e4f7252%22%3E%3Crect%20width%3D%22156%22%20height%3D%22280%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2230.8359375%22%20y%3D%22146.3%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+            data-holder-rendered="true">
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little
+            bit longer.</p>
+        </div>
+        <div class="col-md-3">
+          <img data-src="holder.js/100px280?theme=thumb" alt="Thumbnail [100%x280]" style="height: 280px; width: 100%; display: block;"
+            src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22156%22%20height%3D%22280%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20156%20280%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1606e4f7254%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1606e4f7254%22%3E%3Crect%20width%3D%22156%22%20height%3D%22280%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2230.8359375%22%20y%3D%22146.3%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+            data-holder-rendered="true">
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little
+            bit longer.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-3">
+          <img data-src="holder.js/100px280?theme=thumb" alt="Thumbnail [100%x280]" style="height: 280px; width: 100%; display: block;"
+            src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22156%22%20height%3D%22280%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20156%20280%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1606e4f7213%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1606e4f7213%22%3E%3Crect%20width%3D%22156%22%20height%3D%22280%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2230.8359375%22%20y%3D%22146.3%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+            data-holder-rendered="true">
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little
+            bit longer.</p>
+        </div>
+        <div class="col-md-3">
+          <img data-src="holder.js/100px280?theme=thumb" alt="Thumbnail [100%x280]" style="height: 280px; width: 100%; display: block;"
+            src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22156%22%20height%3D%22280%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20156%20280%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1606e4f7251%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1606e4f7251%22%3E%3Crect%20width%3D%22156%22%20height%3D%22280%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2230.8359375%22%20y%3D%22146.3%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+            data-holder-rendered="true">
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little
+            bit longer.</p>
+        </div>
+        <div class="col-md-3">
+          <img data-src="holder.js/100px280?theme=thumb" alt="Thumbnail [100%x280]" style="height: 280px; width: 100%; display: block;"
+            src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22156%22%20height%3D%22280%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20156%20280%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1606e4f7252%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1606e4f7252%22%3E%3Crect%20width%3D%22156%22%20height%3D%22280%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2230.8359375%22%20y%3D%22146.3%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+            data-holder-rendered="true">
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little
+            bit longer.</p>
+        </div>
+        <div class="col-md-3">
+          <img data-src="holder.js/100px280?theme=thumb" alt="Thumbnail [100%x280]" style="height: 280px; width: 100%; display: block;"
+            src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22156%22%20height%3D%22280%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20156%20280%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1606e4f7254%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1606e4f7254%22%3E%3Crect%20width%3D%22156%22%20height%3D%22280%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2230.8359375%22%20y%3D%22146.3%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
+            data-holder-rendered="true">
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little
+            bit longer.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
