--- a/my-app/src/app/app.component.css
+++ b/my-app/src/app/app.component.css
@@ -1,20 +1,55 @@
 .active{
     align-items: center;
 }
+html,body{height:100%;}
+.carousel,.item,.active{height:100%;}
+.carousel-inner{height:100%;}
+.fill{width:100%;height:100%;background-position:center;background-size:cover;}
 
+.carousel-caption{
+    text-align: center;
+    color:rgb(221, 38, 221);
+    margin-top:20px;
+
+}
+/* faster sliding speed */
+.carousel-inner > .item {
+    -webkit-transition: 0.3s ease-in-out left;
+    -moz-transition: 0.3s ease-in-out left;
+    -o-transition: 0.3s ease-in-out left;
+    transition: 0.3s ease-in-out left;
+}
+
+/* keep full widget on smaller screens */
+@media (max-width: 767px) { 
+    body {
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
+
+@font-face {
+    font-family: 'Regular';
+    src: url('../assets/fonts/tt0855m_.ttf') format('truetype'),url('../assets/fonts/tt1161m_.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
 body{
       font-family: 'Regular'; 
       overflow:hidden!important;
 }
+
 a{
     text-decoration: none;
 }
 .navbar{
+    background-color:#10101000;
+    border-bottom: #10101000;
     position: fixed;
     font-family: 'Regular';
 }
 .navbar-header img{
-    float:left!important;
+    float:center!important;
     width:160px;
     height:40px;
     margin: 5px;
@@ -34,6 +69,13 @@ a{
 .navbar-nav>li>a{
     color:black;
 }
+.nav-item :hover{
+color:white;
+text-decoration: underline;
+text-decoration:1px;
+text-decoration-color: #E18728;
+}
+
 .button {
     background-color: #000000;
     border: 1px;
@@ -46,3 +88,23 @@ a{
     margin: 6px 0px;
     cursor: pointer;
 }
+.jumbotron{
+    text-align: center; 
+    font-family: 'Regular';
+    background-color: #F5F5F5;
+    padding-bottom:0px!important;
+    padding-left: 0px!important;
+    padding-right: 0px!important;
+    margin: 0px!important;
+    height: 650px !important;;
+ }  
+ .jumbotron img{
+      width: 68%; 
+ }
+ .album {
+    min-height: 50rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+    background-color: #f7f7f7;
+}
+ 
