--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -16,45 +16,26 @@
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#property">
+      <a class="nav-link" href="#Rooms">
         <b>Rooms</b>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#groups">
+      <a class="nav-link" href="#Gallery">
         <b>Gallery</b>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#groups">
+      <a class="nav-link" href="#Dining">
         <b>Dining</b>
       </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#groups">
+      <a class="nav-link" href="#About">
         <b>About</b>
       </a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#groups">
-        <b>Contact</b>
-      </a>
-    </li>
-    <li>
-      <form class="form-inline">
-        <input class="form-control" type="search" placeholder="Search">
-      </form>
-    </li>
-    <ul class="nav navbar-nav navbar-right">
-      <li>
-        <a href="#">
-          <button>BookNow</button>
-      </li>
-      <li>
-        <a href="#">
-          <span class="glyphicon glyphicon-log-in"></span> Login</a>
-      </li>
-    </ul>
+
   </ul>
 </nav>
 
@@ -94,7 +75,6 @@
           <p>We love the Big Apple!</p>
         </div>
       </div>
-
     </div>
 
     <!-- Left and right controls -->
@@ -113,9 +93,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3">
-          <img data-src="holder.js/100px280?theme=thumb" alt="Thumbnail [100%x280]" style="height: 280px; width: 100%; display: block;"
-            src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22156%22%20height%3D%22280%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20156%20280%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1606e4f7213%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A14pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1606e4f7213%22%3E%3Crect%20width%3D%22156%22%20height%3D%22280%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2230.8359375%22%20y%3D%22146.3%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-            data-holder-rendered="true">
+          <img alt="Hotel[100%x280]" style="height: 280px; width:100%;" src="../../../assets/images/Reception.jpg" data-holder-rendered="true">
+          <button type="button" class="btn btn-danger">BookNow</button>
           <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little
             bit longer.</p>
         </div>
@@ -174,3 +153,274 @@
     </div>
   </div>
 </section>
+<section>
+  <br>
+
+  <section>
+    <div class="resp-row footer-group contact">
+      <div class="section-links">
+        <div class="footer-nav-list">
+          <ul>
+            <li class="widget-toggle nav-item-top-dest widget-toggle-done">
+              <h2 class="widget-toggle-btn" aria-controls="widget-toggle-i0-e0" aria-expanded="false" role="button" tabindex="0">Top Destinations</h2>
+              <ul class="widget-toggle-bd" id="widget-toggle-i0-e0" style="display: none;" aria-hidden="true">
+                <li>
+                  <a href="https://www.hotels.com/de1506246/hotels-new-york-new-york/" title="Hotels in New York, New York"
+                    rel="follow">Hotels in New York, New York</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/de1504033/hotels-las-vegas-nevada/" title="Hotels in Las Vegas, Nevada" rel="follow">Hotels in Las Vegas, Nevada</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/de1497539/hotels-chicago-illinois/" title="Hotels in Chicago, Illinois" rel="follow">Hotels in Chicago, Illinois</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/de1493604/hotels-san-francisco-california/" title="Hotels in San Francisco, California"
+                    rel="follow">Hotels in San Francisco, California</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/de1467359/hotels-washington-district-of-columbia/" title="Hotels in Washington, District of Columbia"
+                    rel="follow">Hotels in Washington, District of Columbia</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/de1401516/hotels-boston-massachusetts/" title="Hotels in Boston, Massachusetts"
+                    rel="follow">Hotels in Boston, Massachusetts</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/de1483250/hotels-san-diego-california/" title="Hotels in San Diego, California"
+                    rel="follow">Hotels in San Diego, California</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/de1404711/hotels-orlando-florida/" title="Hotels in Orlando, Florida" rel="follow">Hotels in Orlando, Florida</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/de549499/hotels-london-united-kingdom/" title="Hotels in London, United Kingdom"
+                    rel="follow">Hotels in London, United Kingdom</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/de1456744/hotels-new-orleans-louisiana/" title="Hotels in New Orleans, Louisiana"
+                    rel="follow">Hotels in New Orleans, Louisiana</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/de1439028/hotels-los-angeles-california/" title="Hotels in Los Angeles, California"
+                    rel="follow">Hotels in Los Angeles, California</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/de1490932/hotels-san-antonio-texas/" title="Hotels in San Antonio, Texas"
+                    rel="follow">Hotels in San Antonio, Texas</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/de504261/hotels-paris-france/" title="Hotels in Paris, France" rel="follow">Hotels in Paris, France</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/de1481165/hotels-seattle-washington/" title="Hotels in Seattle, Washington"
+                    rel="follow">Hotels in Seattle, Washington</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/de1496137/hotels-atlanta-georgia/" title="Hotels in Atlanta, Georgia" rel="follow">Hotels in Atlanta, Georgia</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/de1434435/hotels-philadelphia-pennsylvania/" title="Hotels in Philadelphia, Pennsylvania"
+                    rel="follow">Hotels in Philadelphia, Pennsylvania</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/de1496344/hotels-austin-texas/" title="Hotels in Austin, Texas" rel="follow">Hotels in Austin, Texas</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/de1512961/hotels-atlantic-city-new-jersey/" title="Hotels in Atlantic City, New Jersey"
+                    rel="follow">Hotels in Atlantic City, New Jersey</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/de712491/hotels-rome-italy/" title="Hotels in Rome, Italy" rel="follow">Hotels in Rome, Italy</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/de1447135/hotels-myrtle-beach-south-carolina/" title="Hotels in Myrtle Beach, South Carolina"
+                    rel="follow">Hotels in Myrtle Beach, South Carolina</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/de1486134/hotels-dallas-texas/" title="Hotels in Dallas, Texas" rel="follow">Hotels in Dallas, Texas</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/de1410382/hotels-houston-texas/" title="Hotels in Houston, Texas" rel="follow">Hotels in Houston, Texas</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/de1440421/hotels-denver-colorado/" title="Hotels in Denver, Colorado" rel="follow">Hotels in Denver, Colorado</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/de1516192/hotels-miami-florida/" title="Hotels in Miami, Florida" rel="follow">Hotels in Miami, Florida</a>
+                </li>
+              </ul>
+            </li>
+            <li class="widget-toggle nav-item-top-countries widget-toggle-done">
+              <h2 class="widget-toggle-btn" aria-controls="widget-toggle-i0-e1" aria-expanded="false" role="button" tabindex="0">Top Countries</h2>
+              <ul class="widget-toggle-bd" id="widget-toggle-i0-e1" style="display: none;" aria-hidden="true">
+                <li>
+                  <a href="https://www.hotels.com/co225/hotels-in-united-states-of-america/" title="United States of America Hotels"
+                    rel="follow">United States of America Hotels</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/co38/hotels-in-canada/" title="Canada Hotels" rel="follow">Canada Hotels</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/co224/hotels-in-united-kingdom/" title="United Kingdom Hotels" rel="follow">United Kingdom Hotels</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/co74/hotels-in-france/" title="France Hotels" rel="follow">France Hotels</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/co197/hotels-in-spain/" title="Spain Hotels" rel="follow">Spain Hotels</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/co106/hotels-in-italy/" title="Italy Hotels" rel="follow">Italy Hotels</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/co82/hotels-in-germany/" title="Germany Hotels" rel="follow">Germany Hotels</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/co44/hotels-in-china/" title="China Hotels" rel="follow">China Hotels</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/co104/hotels-in-ireland/" title="Ireland Hotels" rel="follow">Ireland Hotels</a>
+                </li>
+                <li>
+                  <a href="https://www.hotels.com/co151/hotels-in-netherlands/" title="Netherlands Hotels" rel="follow">Netherlands Hotels</a>
+                </li>
+              </ul>
+            </li>
+            <li class="widget-toggle nav-item-cust-service widget-toggle-done">
+              <h2 class="widget-toggle-btn" aria-controls="widget-toggle-i0-e2" aria-expanded="false" role="button" tabindex="0">Support &amp; FAQs</h2>
+              <ul class="widget-toggle-bd " id="widget-toggle-i0-e2" style="display: none;" aria-hidden="true">
+                <li>
+                  <a href="/account/bookingslist.html" id="ftr-customer-bookings" rel="nofollow" target="_blank">Your bookings</a>
+                </li>
+                <li>
+                  <a href="/customer_care/index.html" id="ftr-faqs" rel="nofollow" target="_blank">FAQs</a>
+                </li>
+                <li>
+                  <a href="/customer_care/index.html" id="ftr-contact" rel="nofollow" target="_blank">Contact us</a>
+                </li>
+                <li>
+                  <a href="mailto:userexperience@hotels.com?subject=Site%20feedback:%20HOME|en_US|HCOM_US|www.hotels.com" id="ftr-feedback"
+                    rel="nofollow" target="_blank">Website feedback</a>
+                </li>
+                <li>
+                  <a href="/account/bookingslist.html?section=COMPLETED" id="ftr-review" rel="nofollow" target="_blank">Review a hotel</a>
+                </li>
+              </ul>
+            </li>
+            <li class="widget-toggle nav-item-partners widget-toggle-done">
+              <h2 class="widget-toggle-btn" aria-controls="widget-toggle-i0-e3" aria-expanded="false" role="button" tabindex="0">Other Expedia Inc. sites</h2>
+              <ul class="widget-toggle-bd " id="widget-toggle-i0-e3" style="display: none;"
+                aria-hidden="true">
+                <li>
+                  <a href="http://www.expedia.com/" id="ftr-our-partners-expedia" rel="nofollow" target="_blank">Expedia</a>
+                </li>
+                <li>
+                  <a href="http://www.hotwire.com/us/index.jsp" id="ftr-our-partners-hotwire" rel="nofollow" target="_blank">Hotwire</a>
+                </li>
+              </ul>
+            </li>
+            <li class="widget-toggle nav-item-affiliates widget-toggle-done">
+              <h2 class="widget-toggle-btn" aria-controls="widget-toggle-i0-e4" aria-expanded="false" role="button" tabindex="0">For Suppliers, Affiliates, and the Media</h2>
+              <ul class="widget-toggle-bd " id="widget-toggle-i0-e4" style="display: none;"
+                aria-hidden="true">
+                <li>
+                  <a href="/deals/travel-affiliate-program/" id="ftr-sam-affiliate-with-us" rel="nofollow" target="_blank">Affiliate with us</a>
+                </li>
+                <li>
+                  <a href="http://www.expediaaffiliate.com/" id="ftr-sam-private-label" rel="nofollow" target="_blank">Private Label</a>
+                </li>
+                <li>
+                  <a href="http://www.advertising.expedia.com" id="ftr-sam-promote-with-us" rel="nofollow" target="_blank">Promote with Us</a>
+                </li>
+                <li>
+                  <a href="https://travelagencies.venere.com/?lang=en" id="ftr-sam-travel-agents" rel="nofollow" target="_blank">Travel Agents</a>
+                </li>
+                <li>
+                  <a href="http://press.hotels.com/us/" id="ftr-sam-press-office" rel="nofollow" target="_blank">Press Office</a>
+                </li>
+              </ul>
+            </li>
+            <li class="widget-toggle nav-item-terms-and-privacy widget-toggle-done widget-toggle-open">
+              <h2 class="widget-toggle-btn widget-toggle-btn-open" aria-controls="widget-toggle-i0-e5" aria-expanded="true"
+                role="button" tabindex="0">User Terms and Privacy Policy</h2>
+              <ul class="widget-toggle-bd" id="widget-toggle-i0-e5" style="display: block;"
+                aria-hidden="false">
+                <li>
+                  <a href="/customer_care/terms_conditions.html" id="ftr-terms-and-conditions" rel="nofollow" target="_blank">Terms &amp; Conditions</a>
+                </li>
+                <li>
+                  <a href="/customer_care/privacy.html" id="ftr-privacy" rel="nofollow" target="_blank">Privacy Policy</a>
+                </li>
+                <li>
+                  <a href="/customer_care/cookie_policy.html" id="ftr-cookie-policy" rel="nofollow" target="_blank">Cookie Policy</a>
+                </li>
+                <li>
+                  <a href="/customer_care/about_our_ads.html" id="ftr-about-our-ads" rel="nofollow" target="_blank">About our ads</a>
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item-about-us">
+              <h2 class="no-sublinks">
+                <a href="/customer_care/about_us.html" id="ftr-about-us" rel="nofollow" target="_blank">About Us</a>
+              </h2>
+            </li>
+            <li class="nav-item-add-hotel">
+              <h2 class="no-sublinks">
+                <a href="https://join.expediapartnercentral.com/LangCode/1033/?utm_source=hcom&amp;utm_medium=referral&amp;utm_campaign=join_expedia&amp;utm_term=05_17&amp;utm_content=hcom_footer"
+                  id="ftr-add-hotel" rel="nofollow" target="_blank">Add your property</a>
+              </h2>
+            </li>
+            <li class="nav-item-jobs">
+              <h2 class="no-sublinks">
+                <a href="http://www.lifeatexpedia.com/brands/hotels-com/" id="ftr-jobs" rel="nofollow" target="_blank">Jobs</a>
+              </h2>
+            </li>
+          </ul>
+          <ul class="seo-links">
+            <li>
+              <a href="/articles/" target="_blank">Travel Guides</a>
+            </li>
+            <li>
+              <a href="/alltop50cities/" target="_blank">Top 50 Cities</a>
+            </li>
+            <li>
+              <a href="/allcountries/" target="_blank">All countries</a>
+            </li>
+            <li>
+              <a href="/hi1/hotel-index/" target="_blank">All Hotels</a>
+            </li>
+            <li>
+              <a href="/site-index/" target="_blank">Site Index</a>
+            </li>
+          </ul>
+        </div>
+        <div class="copyright">
+          <p>© 2018 Hotels.com, L.P. All rights reserved.</p>
+          <p>Hotels.com and the Hotels.com logo are trademarks or registered trademarks of Hotels.com, LP in the USA and/or
+            other countries. All other trademarks are property of their respective owners.</p>
+          <p>
+            <a href="/hotel-rewards-pillar/hotelscomrewards.html" class="footer-welcome-rewards" id="ftr-welcome-rewards" rel="nofollow">* Learn more about Hotels.com® Rewards</a>
+          </p>
+        </div>
+      </div>
+      <div class="ad-banner">
+        <div id="adLEFT3_300X50" name="ad"></div>
+        <div id="adCCOL1_300X250" name="ad"></div>
+      </div>
+      <div class="section-logos">
+        <div class="footer-logos-and-verisign">
+          <ul class="footer-logos"></ul>
+        </div>
+      </div>
+    </div>
+  </section>
+  <div class="footer">
+    <footer class="container-fluid text-center">
+      <a href="#myPage" title="To Top">
+        <span class="glyphicon glyphicon-chevron-up"></span>
+      </a>
+      <p> Copyright ©2017 Shortcastle Technologies Pvt Ltd. All Rights Reserved. </p>
+
+    </footer>
+  </div>
